k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cba-ccep-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cba-cppe
  template:
    metadata:
      labels:
        app: cba-cppe
    spec:
      containers:
      - name: myapp
        image: quay.io/leoliu2011/cba-cppe:latest
        resources: {}
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        restartPolicy: Always
